CSS for form inputs: fix padding
Firefox in particular respects the padding on inputs and truncates displayed text in typical input-lg text form inputs (e.g. feedback form on WordPress).

--- a/css/ala-styles.css
+++ b/css/ala-styles.css
@@ -144,10 +144,10 @@ section#breadcrumb li + li::before {
 
 /* Forms
 ================================= */
-.input-lg {height: 49px;}
+.input-lg {height: 50px;padding: 12px 16px;}
 #alarecaptcha-container {padding-left: 0;}
 #alafeedbacksubmit input {color:#F26649;background-color:#fff;border-color:#F26649;padding:12px 18px;font-size:16px;line-height:1.33;border-radius:0}
-.form-control {border-radius: 0;padding: 18.5px 12px;border: 1px solid #999;}
+.form-control {border-radius: 0;border: 1px solid #999;}
 .form-control:focus {border-color: #66afe9;outline: 0;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);}
 .form-control::-moz-placeholder {color: #999999;opacity: 1;}
 .form-control::-ms-input-placeholder {color: #999999;}
@@ -155,7 +155,7 @@ section#breadcrumb li + li::before {
 .form-control[disabled],
 .form-control[readonly],
 fieldset[disabled] .form-control {cursor: not-allowed;background-color: #eeeeee;opacity: 1;}
-textarea.form-control {height: auto;}
+textarea.form-control {height: auto;padding: 18.5px 12px;}
 input[type="search"] {-webkit-appearance: none;}
 input[type="date"] {line-height: 34px;}
 .form-group {margin-bottom: 15px;}
